@@ -3,6 +3,9 @@ $Id$
 2016-04-23  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
+	- Innodisk 3ME SSDs
+	- Innodisk 3IE2/3MG2/3SE2-P SSDs: Rename, add 3SE2-P
+	- Innodisk 3IE3/3ME3 SSDs: Rename, add 3IE3
 	- USB: Buffalo MiniStation HD-PNFU3 (0x0411:0x0251) (ticket #683)
 	- USB: Renesas uPD720231A (0x045b:0x022a)
 	- USB: Toshiba Canvio (0x0480:0x0210, 0x0480:0xa20c)
